--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #ip-search-div {
     position: fixed;
     width: 20%;
-    top: 18%;
+    top: 15%;
     left: 50%;
     margin-left: -10%;
     display: flex;
@@ -43,6 +43,11 @@
 #map {
     width: 100%;
     height: 100%;
+}
+
+.country-flag-img {
+    width: 22px;
+    height: 16px;
 }
 
 body {
